--- a/style.css
+++ b/style.css
@@ -25,34 +25,35 @@ body {
 .textarea {
     display: block;
     margin: 10px auto 10px;
-    width: 730px;
+    height: 200px;
+    width: 750px;
     padding: 10px;
     font-size: 16px;
 }
 
 .keyboard {
     margin: 10px auto 10px;
-    width: 740px;
+    width: 750px;
     height: 250px;
-    padding: 5px;
+    padding: 10px;
     border: 2px solid black;
     border-radius: 10px;
     background-color: grey;
 }
 
-.row {
-    display: flex;
-    width: 100%;
+.buttons {
+    text-align: center;
 }
 
 .button {
     width: 40px;
     height: 40px;
     margin: 4px;
-    border: 1px solid hsl(0, 0%, 28%);
+    border: none;
     border-radius: 5px;
     display: flex;
     color: white;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     background-color: hsl(0, 0%, 28%);
@@ -61,11 +62,19 @@ body {
 
 .button:hover {
     background-color: #31a881;
-    border: 2px solid #31a881;
 }
 
 .button:active {
-    background-color: hwb(133 6% 7%);
-    border: 2px solid hwb(133 6% 7%);
-    border-radius: 50%;
+    border-radius: 30px;
+    background-color: hsl(100, 79%, 52%);
+}
+
+.button--bit-wide {
+    width: 52px;
+    background-color: black;
+}
+
+.button--wide {
+    width: 100px;
+    background-color: black;
 }
